Okasaki didn't invent numerical representations.

--- a/library.bib
+++ b/library.bib
@@ -1,3 +1,25 @@
+
+@inproceedings{Guibas1977,
+address = {New York, New York, USA},
+author = {Guibas, Leo J. and McCreight, Edward M. and Plass, Michael F. and Roberts, Janet R.},
+booktitle = {Proceedings of the ninth annual ACM symposium on Theory of computing - STOC '77},
+doi = {10.1145/800105.803395},
+file = {:home/aspiwack/Documents/Mendeley Desktop/Guibas et al. - 1977 - A new representation for linear lists.pdf:pdf},
+pages = {49--60},
+publisher = {ACM Press},
+series = {STOC '77},
+title = {{A new representation for linear lists}},
+url = {http://portal.acm.org/citation.cfm?doid=800105.803395},
+year = {1977}
+}
+@article{Myers1983,
+author = {Myers, Eugene W.},
+journal = {Information processing letters},
+pages = {241--248},
+title = {{An applicative random-access stack}},
+volume = {17},
+year = {1983}
+}
 @book{Okasaki1999,
 abstract = {Most books on data structures assume an imperative language such as C or C++. However, data structures for these languages do not always translate well to functional languages such as Standard ML, Haskell, or Scheme. This book describes data structures from the point of view of functional languages, with examples, and presents design techniques that allow programmers to develop their own functional data structures. The author includes both classical data structures, such as red-black trees and binomial queues, and a host of new data structures developed exclusively for functional languages. All source code is given in Standard ML and Haskell, and most of the programs are easily adaptable to other functional languages. This handy reference for professional programmers working with functional languages can also be used as a tutorial or for self-study.},
 author = {Okasaki, Chris},
