Reference to Okasaki's square matrix paper.

--- a/library.bib
+++ b/library.bib
@@ -28,3 +28,16 @@ pages = {220},
 title = {{Purely functional data structures}},
 year = {1999}
 }
+@inproceedings{Okasaki1999a,
+address = {New York, New York, USA},
+author = {Okasaki, Chris},
+booktitle = {Proceedings of the fourth ACM SIGPLAN international conference on Functional programming - ICFP '99},
+doi = {10.1145/317636.317781},
+file = {:home/aspiwack/Documents/Mendeley Desktop/Okasaki - 1999 - From fast exponentiation to square matrices.pdf:pdf},
+isbn = {1581131119},
+pages = {28--35},
+publisher = {ACM Press},
+title = {{From fast exponentiation to square matrices}},
+url = {http://portal.acm.org/citation.cfm?doid=317636.317781},
+year = {1999}
+}
