Bibliography: publisher in Okasaki's Purely Functional Data Structures.

--- a/library.bib
+++ b/library.bib
@@ -24,6 +24,7 @@ abstract = {Most books on data structures assume an imperative language such as 
 author = {Okasaki, Chris},
 isbn = {0521663504},
 pages = {220},
+publisher = {Cambridge University Press},
 title = {{Purely functional data structures}},
 year = {1999}
 }
